--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,6 +1,7 @@
 #carouselExampleSlidesOnly
 {
     width:100%;
+    height: 40vw;
     overflow: hidden;
     position:fixed;
     z-index: -1;
@@ -10,6 +11,10 @@
     #carouselExampleSlidesOnly
     {
         top:0;
+        width:100%;
+        overflow: hidden;
+        position:fixed;
+        z-index: -1;
     }
 }
 #about-yrc
@@ -17,36 +22,30 @@
     margin-top: 40vw;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     padding:1.5vw;
-    /*background-color: rgb(255, 255, 255);
-    color: #85434e;*/
-    background-color: #D7CEC7;
-    color: #76323F;
+    color: rgb(0, 0, 0);
+    background-color: #E7E7EF;
     font-size: calc(0.6em + 1.5vmin);
     text-align: justify;
 }
 #about-yrc h2
 {
     text-align: center;
-    /*color: #68101e;*/
-    color: #76323F;
+    color: rgb(53, 53, 53);
     font-weight: bold;
     font-size: calc(1em + 1.5vmin);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin-top: 2.5vw;
-    /*text-shadow: 0.5px 0.5px 0.5px hsl(353, 100%, 98%);*/
 }
 #principles h4
 {
     font-size: calc(0.5em + 1.4vmin);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    /*text-shadow: 1px 1px 1px rgb(87, 59, 75);*/
+    text-shadow: 1px 1px 1px rgb(109, 0, 0);
 }
 #principles
 {
-    /*color: white;
-    background-color: #830519;*/
-    color: #D7CEC7;
-    background-color: #76323F;
+    background-color: #CE0000;
+    color: #E7E7EF;
     font-size: calc(0.5em + 1.5vmin);
     padding:1vw;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -73,11 +72,10 @@
     padding:2px;
     font-size: calc(0.5em + 1.5vmin);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-shadow: 0.5px 0.5px 0.5px rgb(117, 117, 117);
+    text-shadow: 0.5px 0.5px 0.5px #364646;
 }
 #mission-motto
 {
-    /*background-color: rgb(32, 32, 32);*/
-    background-color: #565656;
+    background-color: #003031;
     padding:1vw;
 }
