--- a/src/app/components/blood-donation/blood-donation.component.css
+++ b/src/app/components/blood-donation/blood-donation.component.css
@@ -1,6 +1,6 @@
 .blood_donation
 {
-    background-color: #565656;
+    background-color: #CE0000;
     padding: 1.5vw;
 }
 .blood_donation h2
@@ -9,6 +9,7 @@
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin-top: 2.5vw;
+    text-shadow: 0.5px 0.5px 0.5px rgb(112, 0, 0);
 }
 .bd
 {
