--- a/src/app/components/gallery/gallery.component.css
+++ b/src/app/components/gallery/gallery.component.css
@@ -1,6 +1,6 @@
 .photo-gallery
 {
-    background-color: #D7CEC7;
+    background-color:  #E7E7DF;
     padding-left: 5vw;
     padding-right: 5vw;
     padding-top: 3vw;
@@ -10,9 +10,10 @@
 {
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: calc(1.5em + 1vmin);
+    font-size: calc(1.5em + 1.5vmin);
     margin: 1vw;
-    color: #76323F;
+    color: rgb(48, 67, 80);
+    text-shadow: 0.5px 0.5px 0.5px rgb(166, 180, 189);
 }
 .photo-gallery .column img
 {
