added missing team photos

--- a/src/app/components/recent-updates/recent-updates.component.css
+++ b/src/app/components/recent-updates/recent-updates.component.css
@@ -71,6 +71,7 @@ span.carousel-control-next-icon
 .carousel-indicators
 {
     margin-bottom: -50px;
+    z-index: 10;
 }
 @media screen and (max-width: 630px)
 {
