--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -1,4 +1,3 @@
-<!--<div class="our-team" style="background-image: url('assets/images/backgrounds/background1.jpg')">-->
 <div class="our-team" id="team-component">
   <h2>TEAM</h2>
   <div class="team">
@@ -18,7 +17,7 @@
       </div>
       <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
-          <img class="card-img-top" src="assets/images/team/b16/person-dummy.jpg" alt="Pranay">
+          <img class="card-img-top" src="assets/images/team/b16/pranay.jpg" alt="Pranay">
           <div class="card-body">
             <p class="card-text">Pranay Mital</p>
             <div class="social-media">
@@ -118,7 +117,7 @@
       </div>
       <div class="col-6 col-sm-6 col-lg-2">
         <div class="card team-member">
-          <img class="card-img-top" src="assets/images/team/b16/person-dummy.jpg" alt="Shivam">
+          <img class="card-img-top" src="assets/images/team/b16/shivam.jpg" alt="Shivam">
           <div class="card-body">
             <p class="card-text">Shivam Ghildiyal</p>
             <div class="social-media">
@@ -170,7 +169,7 @@
       </div>
       <div class="col-6 col-sm-6 col-lg-2">
         <div class="card team-member">
-          <img class="card-img-top" src="assets/images/team/b16/person-dummy.jpg" alt="Pratiti">
+          <img class="card-img-top" src="assets/images/team/b16/pratiti.jpg" alt="Pratiti">
           <div class="card-body">
             <p class="card-text">Pratiti Basak</p>
             <div class="social-media">
@@ -210,7 +209,7 @@
       </div>
       <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
-          <img class="card-img-top" src="assets/images/team/b17/person-dummy.jpg" alt="Saksham">
+          <img class="card-img-top" src="assets/images/team/b17/saksham.JPG" alt="Saksham">
           <div class="card-body">
             <p class="card-text">Saksham Mittal</p>
             <div class="social-media">
@@ -222,7 +221,7 @@
       </div>
       <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
-          <img class="card-img-top" src="assets/images/team/b17/person-dummy.jpg" alt="Akshay">
+          <img class="card-img-top" src="assets/images/team/b17/akshay.jpg" alt="Akshay">
           <div class="card-body">
             <p class="card-text">Akshay Bhandari</p>
             <div class="social-media">
