--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,17 +1,17 @@
 #carouselExampleSlidesOnly
 {
     width:100%;
-    height: 40vw;
     overflow: hidden;
-    position:fixed;
-    z-index: -1;
+    position:relative;
+    height: 40vw;
 }
 @media screen and (min-width: 992px)
 {
     #carouselExampleSlidesOnly
     {
-        top:0;
+        top: 3.5vw;
         width:100%;
+        height: 40vw;
         overflow: hidden;
         position:fixed;
         z-index: -1;
@@ -26,6 +26,13 @@
     background-color: #E7E7EF;
     font-size: calc(0.6em + 1.5vmin);
     text-align: justify;
+}
+@media screen and (max-width: 992px)
+{
+    #about-yrc
+    {
+        margin-top: 0;
+    }
 }
 #about-yrc h2
 {
