--- a/src/app/components/awards/awards.component.css
+++ b/src/app/components/awards/awards.component.css
@@ -20,6 +20,7 @@
     font-family: 'Raleway', sans-serif;
     font-size: 15px;
     list-style-type: none;
+    overflow: hidden;
   }
   
   .hex 
@@ -107,6 +108,7 @@
   .hex p {
     top: 50%;
     padding-bottom:50%;
+    font-size: calc(0.5em + 0.5vmin);
     -webkit-transform:translate3d(0,100%,0);
         -ms-transform:translate3d(0,100%,0);
             transform:translate3d(0,100%,0);
