--- a/src/app/components/awards/awards.component.html
+++ b/src/app/components/awards/awards.component.html
@@ -3,7 +3,7 @@
   <ul id="hexGrid">
     <li class="hex">
       <div class="hexIn">
-        <a class="hexLink" href="#">
+        <a class="hexLink">
           <img src="assets/images/awards/awards.jpg" alt="awards" />
           <h1></h1>
           <p>Some of the awards recieved by Youth Red Cross, VIT</p>
@@ -12,7 +12,7 @@
     </li>
     <li class="hex">
       <div class="hexIn">
-        <a class="hexLink" href="#">
+        <a class="hexLink">
           <img src="assets/images/awards/best-club-2018.jpg" alt="best club" />
           <h1></h1>
           <p>The best club award of VIT 2017-18 awarded to Youth Red Cross</p>
@@ -21,7 +21,7 @@
     </li>
     <li class="hex">
       <div class="hexIn">
-        <a class="hexLink" href="#">
+        <a class="hexLink">
           <img src="assets/images/awards/odisha.jpg" alt="odisha awards" />
           <h1></h1>
           <p>Awards won by YRC volunteers in the inter-state national camp, Odisha</p>
@@ -30,7 +30,7 @@
     </li>
     <li class="hex">
       <div class="hexIn">
-        <a class="hexLink" href="#">
+        <a class="hexLink">
           <img src="assets/images/awards/aachran-jain.jpg" alt="aachran jain" />
           <h1></h1>
           <p>Mr. Aachran Jain, YRC volunteer, receiving award from the Vice President of  VIT</p>
@@ -39,7 +39,7 @@
     </li>
     <li class="hex">
       <div class="hexIn">
-        <a class="hexLink" href="#">
+        <a class="hexLink">
           <img src="assets/images/awards/best-yrc-volunteer.jpg" alt="best yrc volunteer" />
           <h1></h1>
           <p>Best Youth Red Cross volunteer 2015-16, Mr. Bhawesh Upadhyay receiving award</p>
@@ -48,7 +48,7 @@
     </li>
     <li class="hex">
       <div class="hexIn">
-        <a class="hexLink" href="#">
+        <a class="hexLink">
           <img src="assets/images/awards/best-club-award.jpg" alt="best club" />
           <h1></h1>
           <p>On the eve of University day celebration, Youth Red Cross receives best club award.</p>
@@ -57,7 +57,7 @@
     </li>
     <li class="hex">
       <div class="hexIn">
-        <a class="hexLink" href="#">
+        <a class="hexLink">
           <img src="assets/images/awards/geneva-convention.jpg" alt="geneva convention" />
           <h1></h1>
           <p>Geneva Convention day, Youth Red Cross volunteers receiving award from the Vice President of  VIT</p>
@@ -66,7 +66,7 @@
     </li>
     <li class="hex">
       <div class="hexIn">
-        <a class="hexLink" href="#">
+        <a class="hexLink">
           <img src="assets/images/awards/YRC-movement.jpg" alt="best yrc movement" />
           <h1></h1>
           <p>Award to Red Cross movement in VIT</p>
@@ -75,7 +75,7 @@
     </li>
     <li class="hex">
       <div class="hexIn">
-        <a class="hexLink" href="#">
+        <a class="hexLink">
           <img src="assets/images/awards/best-zonal-yrc.jpg" alt="best zonal yrc" />
           <h1></h1>
           <p>Best Zonal Youth Red Cross Award to YRC-VIT for Blood Donation Activities</p>
@@ -84,7 +84,7 @@
     </li>
     <li class="hex">
       <div class="hexIn">
-        <a class="hexLink" href="#">
+        <a class="hexLink">
           <img src="assets/images/awards/IRC-tamilnadu.jpg" alt="irc tamilnadu" />
           <h1></h1>
           <p>Youth Red Cross, VIT volunteers at the Indian Red Cross Society, Tamil Nadu</p>
