--- a/src/app/components/gallery/gallery.component.css
+++ b/src/app/components/gallery/gallery.component.css
@@ -24,15 +24,15 @@
 }
 .row 
 {
-    display: -ms-flexbox; /* IE10 */
+    display: -ms-flexbox; 
     display: flex;
-    -ms-flex-wrap: wrap; /* IE10 */
+    -ms-flex-wrap: wrap; 
     flex-wrap: wrap;
     padding: 0 4px;
 }
 .column 
 {
-    -ms-flex: 25%; /* IE10 */
+    -ms-flex: 25%; 
     flex: 25%;
     max-width: 25%;
     padding: 0 4px;
@@ -101,8 +101,8 @@
 .caption-style-1 .blur 
 {
     background-color: rgba(0, 0, 0, 0.5);
-    height: 300px;
-    width: 400px;
+    height: 1000px;
+    width: 1000px;
     z-index: 5;
     position: absolute;
 }
@@ -117,5 +117,16 @@
     margin-left: 15px;
     text-decoration: none;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: calc(0.6em + 0.6vmin);
 }
-    
+@media screen and (max-width: 800px) 
+{
+    .caption-style-1 .caption 
+    {
+        opacity: 1;
+    }
+    .caption-style-1 .blur 
+    {
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+}
