--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,9 +8,9 @@
             <div class="row">
               <div class="col-12">
                 <li><a href="#"><b>Home</b></a></li>
-                <li><a href="#"><b>FAQ</b></a></li>
+                <!--<li><a href="#"><b>FAQ</b></a></li>
                 <li><a href="#"><b>Sign Up</b></a></li>
-                <li><a href="#"><b>Sign In</b></a></li> 
+                <li><a href="#"><b>Sign In</b></a></li>-->
               </div>
             </div>
           </div>
@@ -22,18 +22,15 @@
           SMV 108, VIT, Vellore
           <!--<i class="fa fa-phone fa-lg"></i>: +44 20 7240 9319<br>-->
           <br>
-          <i class="fa fa-envelope fa-lg"></i>: <a href="#">yrc2k17@gmail.com</a><br><br>
+          <i class="fa fa-envelope fa-lg"></i>: <a href="mailto:yrcvit2k18@gmail.com">yrcvit2k18@gmail.com</a><br><br>
         </address>
       </div>
       <div class="col-lg-3 col-12">
         <h5>Connect With Us</h5><hr>
         <div style="text-align: center">
-          <a class="btn btn-social-icon btn-google-plus" href="http://google.com/+"><i class="fa fa-google-plus"></i></a>
-          <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
-          <a class="btn btn-social-icon btn-linkedin"href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
-          <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-          <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
-          <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o"></i></a>
+          <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/YouthRedCrossVit/?ref=br_rs"><i class="fa fa-facebook"></i></a>
+          <a class="btn btn-social-icon btn-youtube" href="https://www.youtube.com/channel/UCqjnmHWLlgEIxuXzDjkAo5g"><i class="fa fa-youtube"></i></a>
+          <a class="btn btn-social-icon" href="mailto:yrcvit2k18@gmail.com"><i class="fa fa-envelope-o"></i></a>
         </div>
       </div>
     </div>
