modified footer and team components

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -22,7 +22,7 @@
           SMV 108, VIT, Vellore
           <!--<i class="fa fa-phone fa-lg"></i>: +44 20 7240 9319<br>-->
           <br>
-          <i class="fa fa-envelope fa-lg"></i>: <a href="mailto:yrcvit2k18@gmail.com">yrcvit2k18@gmail.com</a><br><br>
+          <i class="fa fa-envelope fa-lg"></i>: <a href="mailto:yrc@vit.ac.in">yrc@vit.ac.in</a><br><br>
         </address>
       </div>
       <div class="col-lg-3 col-12">
@@ -30,7 +30,7 @@
         <div style="text-align: center">
           <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/YouthRedCrossVit/?ref=br_rs"><i class="fa fa-facebook"></i></a>
           <a class="btn btn-social-icon btn-youtube" href="https://www.youtube.com/channel/UCqjnmHWLlgEIxuXzDjkAo5g"><i class="fa fa-youtube"></i></a>
-          <a class="btn btn-social-icon" href="mailto:yrcvit2k18@gmail.com"><i class="fa fa-envelope-o"></i></a>
+          <a class="btn btn-social-icon" href="mailto:yrc@vit.ac.in"><i class="fa fa-envelope-o"></i></a>
         </div>
       </div>
     </div>
