--- a/src/app/components/blood-donation/blood-donation.component.html
+++ b/src/app/components/blood-donation/blood-donation.component.html
@@ -10,4 +10,8 @@
       <img src="assets/images/blood_donation/blood_donation_camp.jpg" alt="Blood Donation Camp">
   </div>
   <img class="bd-img" src="assets/images/blood_donation/blood_donation_camp.jpg" alt="Blood Donation Camp">
+  <div class="registration">
+      <p>Find the link below to visit the Blood Donation portal.</p>
+      <div class="row justify-content-center"><div class="col-sm-2"><a class="btn btn-primary" href="https://yrcvitblooddonation.000webhostapp.com">Blood Donation portal</a></div></div>
+  </div>
 </div>
