some changes, and temp

--- a/src/app/components/awards/awards.component.html
+++ b/src/app/components/awards/awards.component.html
@@ -33,7 +33,7 @@
         <a class="hexLink">
           <img src="assets/images/awards/aachran-jain.jpg" alt="aachran jain" />
           <h1></h1>
-          <p>Mr. Aachran Jain, YRC volunteer, receiving award from the Vice President of  VIT</p>
+          <p>Mr. Aachran Jain, YRC volunteer, receiving award from IRCS Tamil Nadu</p>
         </a>
       </div>
     </li>
@@ -85,9 +85,9 @@
     <li class="hex">
       <div class="hexIn">
         <a class="hexLink">
-          <img src="assets/images/awards/IRC-tamilnadu.jpg" alt="irc tamilnadu" />
+          <img src="assets/images/awards/aishani.jpg" alt="aishani" />
           <h1></h1>
-          <p>Youth Red Cross, VIT volunteers at the Indian Red Cross Society, Tamil Nadu</p>
+          <p>Aishani Bangia, winner of online essay and poetry competition awarded by our beloved Vice President Mr. G. V. Selvam</p>
         </a>
       </div>
     </li>
