--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -27,9 +27,9 @@
       </div>
       <div class="col-lg-3 col-12">
         <h5>Connect With Us</h5><hr>
-        <div style="text-align: center">
-          <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/YouthRedCrossVit/?ref=br_rs"><i class="fa fa-facebook"></i></a>
-          <a class="btn btn-social-icon btn-youtube" href="https://www.youtube.com/channel/UCqjnmHWLlgEIxuXzDjkAo5g"><i class="fa fa-youtube"></i></a>
+        <div>
+          <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/YouthRedCrossVit/?ref=br_rs" target="_blank"><i class="fa fa-facebook"></i></a>
+          <a class="btn btn-social-icon btn-youtube" href="https://www.youtube.com/channel/UCqjnmHWLlgEIxuXzDjkAo5g" target="_blank"><i class="fa fa-youtube"></i></a>
           <a class="btn btn-social-icon" href="mailto:yrc@vit.ac.in"><i class="fa fa-envelope-o"></i></a>
         </div>
       </div>
