--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -24,6 +24,9 @@
           <a class="nav-link" [ngx-scroll-to]="'#team-component'" [ngx-scroll-to-duration]='1000'>Team</a>
       </li>
     </ul>
+    <div class="ml-auto">
+      <a class="nav-link btn bg-secondary" href="https://yrcvitblooddonation.000webhostapp.com" target="_blank">Donate Blood!</a>
+    </div>
   </div>
 </nav>
 <button id="scroll-top"><a [ngx-scroll-to]="'#navbar-top'" [ngx-scroll-to-duration]='1000'>^</a></button>
