--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -10,7 +10,7 @@
             <p class="card-text">Arinjoy Das</p>
             <div class="social-media">
               <a href="https://www.facebook.com/arinjoy.das"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -22,7 +22,7 @@
             <p class="card-text">Arpita Dutta</p>
             <div class="social-media">
               <a href="https://www.facebook.com/arpita.dutta.961993"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -34,7 +34,7 @@
             <p class="card-text">Deepthi</p>
             <div class="social-media">
               <a href="#"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -46,7 +46,7 @@
             <p class="card-text">Giridharan Vijay kumar</p>
             <div class="social-media">
               <a href="https://www.facebook.com/giridharan.vijaykumar"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -58,7 +58,7 @@
             <p class="card-text">Kamal Chaudhary</p>
             <div class="social-media">
               <a href="https://www.facebook.com/kamal.chaudhary.7982780?ref=br_rs"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
             <p class="card-text">Kavya Pradeep</p>
             <div class="social-media">
               <a href="https://www.facebook.com/kavya.pradeep.94"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -86,7 +86,7 @@
             <p class="card-text">Madhoora Bhattacharya</p>
             <div class="social-media">
               <a href="https://www.facebook.com/madhoora.bhattacharya"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -98,7 +98,18 @@
             <p class="card-text">Nishu Tripathi</p>
             <div class="social-media">
               <a href="https://www.facebook.com/nishu.tripathi.338?ref=br_rs"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-6 col-sm-6 col-lg-2">
+        <div class="card team-member">
+          <img class="card-img-top" src="assets/images/team/b16/pallavi.jpg" alt="Pallavi">
+          <div class="card-body">
+            <p class="card-text">Pallavi Agarwal</p>
+            <div class="social-media">
+              <a href="https://www.facebook.com/profile.php?id=100009497037569"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>   
             </div>
           </div>
         </div>
@@ -110,7 +121,7 @@
             <p class="card-text">Pranay Mital</p>
             <div class="social-media">
               <a href="https://www.facebook.com/pranaymital"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -122,7 +133,7 @@
             <p class="card-text">Pratiti Basak</p>
             <div class="social-media">
               <a href="https://www.facebook.com/pratiti.basak.9"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -138,7 +149,7 @@
             <p class="card-text">Raksha Padaki</p>
             <div class="social-media">
               <a href="#"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -150,7 +161,7 @@
             <p class="card-text">Sandipan Mukherjee</p>
             <div class="social-media">
               <a href="https://www.facebook.com/sandipan.mukherjee.716"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -162,7 +173,7 @@
             <p class="card-text">Shivam Ghildiyal</p>
             <div class="social-media">
               <a href="https://www.facebook.com/shivam.ghildiyal.9"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -174,7 +185,7 @@
             <p class="card-text">Sonali Pandey</p>
             <div class="social-media">
               <a href="https://www.facebook.com/sonapandey9"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -185,8 +196,18 @@
           <div class="card-body">
             <p class="card-text">Tharan Keshvar</p>
             <div class="social-media">
-              <a href="https://www.facebook.com/tharan.keshvar"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+              <a href="https://www.facebook.com/tharan.keshvar"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>   
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-6 col-sm-6 col-lg-2">
+        <div class="card team-member">
+          <img class="card-img-top" src="assets/images/team/b16/vaishali.jpg" alt="Vaishaali">
+          <div class="card-body">
+            <p class="card-text">Vaishaali A</p>
+            <div class="social-media">
+              <a href="https://www.facebook.com/profile.php?id=100009220255388"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>   
             </div>
           </div>
         </div>
@@ -202,7 +223,7 @@
             <p class="card-text">Akshay Bhandari</p>
             <div class="social-media">
               <a href="https://www.facebook.com/akshay.bhandari.754"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -211,10 +232,10 @@
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b17/amisha.png" alt="Amisha">
           <div class="card-body">
-            <p class="card-text">Amisha Srivastava</p>
+            <p class="card-text">Amisha Priya</p>
             <div class="social-media">
               <a href="https://www.facebook.com/amisha.srivastava.53"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -226,7 +247,7 @@
             <p class="card-text">Husain Shakruwala</p>
             <div class="social-media">
               <a href="https://www.facebook.com/hsaincooll"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -238,7 +259,7 @@
             <p class="card-text">Nishant Thakur</p>
             <div class="social-media">
               <a href="https://www.facebook.com/profile.php?id=100011454287571"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -250,7 +271,7 @@
             <p class="card-text">Pratyush Narayan</p>
             <div class="social-media">
               <a href="https://www.facebook.com/narayanpratyush"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -266,7 +287,7 @@
             <p class="card-text">Sai Akhil Inturi</p>
             <div class="social-media">
               <a href="https://www.facebook.com/inturi.saiakhil7?ref=br_rs"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -278,7 +299,7 @@
             <p class="card-text">Sai Charan Naidu</p>
             <div class="social-media">
               <a href="https://www.facebook.com/saicharan.naidu.9"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -290,7 +311,7 @@
             <p class="card-text">Saksham Mittal</p>
             <div class="social-media">
               <a href="https://www.facebook.com/saksham.mittal1"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -302,7 +323,7 @@
             <p class="card-text">Samanwitha Rao</p>
             <div class="social-media">
               <a href="https://www.facebook.com/samanwitha.rao"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -314,7 +335,7 @@
             <p class="card-text">Sarvesh Venkatesan</p>
             <div class="social-media">
               <a href="https://www.facebook.com/sarves.venkatesan"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -330,7 +351,7 @@
             <p class="card-text">Shweta Singh</p>
             <div class="social-media">
               <a href="https://www.facebook.com/profile.php?id=100013546020730"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -354,7 +375,7 @@
             <p class="card-text">Sourabh Dubey</p>
             <div class="social-media">
               <a href="https://www.facebook.com/profile.php?id=100009479820103"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
@@ -378,7 +399,7 @@
             <p class="card-text">Vedatroyee De Ghosh</p>
             <div class="social-media">
               <a href="https://www.facebook.com/vedatroyee.ghosh"><img src="assets/images/team/facebook.png" alt="FaceBook"></a>
-              <a href="#"><img src="assets/images/team/linkedin.png" alt="LinkedIn"></a>
+               
             </div>
           </div>
         </div>
