--- a/src/app/components/recent-updates/recent-updates.component.html
+++ b/src/app/components/recent-updates/recent-updates.component.html
@@ -47,7 +47,8 @@
 </div>-->
 <div class="facebook-posts" id="recent-updates-component">
   <h2>Recent Updates</h2>
-  <div class="events">
+  
+  <!-- <div class="events">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -82,5 +83,5 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-  </div>
+  </div> -->
 </div>
