--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -25,7 +25,7 @@
       </li>
     </ul>
     <div class="ml-auto">
-      <a class="nav-link btn bg-secondary" href="https://yrcvitblooddonation.000webhostapp.com" target="_blank">Donate Blood!</a>
+      <a class="btn btn-primary" href="https://yrcvitblooddonation.000webhostapp.com" target="_blank">Donate Blood!</a>
     </div>
   </div>
 </nav>
