--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -13,7 +13,7 @@
             </li>
         </ul>
         <ul class="caption-style-1">
-            <li><img src="assets/images/gallery/yoga_camp.jpg" slt="yoga camp">
+            <li><img src="assets/images/gallery/yoga_camp.jpg" alt="yoga camp">
               <div class="caption">
                 <div class="blur"></div>
                 <div class="caption-text">
@@ -35,7 +35,7 @@
     </div>
     <div class="column">
         <ul class="caption-style-1">
-            <li><img src="assets/images/gallery/swachh_bharat.jpg" slt="swachh bharat">
+            <li><img src="assets/images/gallery/swachh_bharat.jpg" alt="swachh bharat">
               <div class="caption">
                 <div class="blur"></div>
                 <div class="caption-text">
@@ -87,7 +87,7 @@
             </li>
         </ul>
         <ul class="caption-style-1">
-            <li><img src="assets/images/gallery/orphanage_visit.jpg" slt="orphanage visit">
+            <li><img src="assets/images/gallery/orphanage_visit.jpg" alt="orphanage visit">
               <div class="caption">
                 <div class="blur"></div>
                 <div class="caption-text">
