--- a/src/app/components/recent-updates/recent-updates.component.html
+++ b/src/app/components/recent-updates/recent-updates.component.html
@@ -47,6 +47,7 @@
 </div>-->
 <div class="facebook-posts" id="recent-updates-component">
   <h2>Recent Updates</h2>
+  <div class="row justify-content-center"><iframe class="facebook-iframe" src="https://www.facebook.com/YouthRedCrossVit/"></iframe></div>
   <!-- <div class="events">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
