--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,21 +1,45 @@
 <div class="footer" id="footer-component">
   <div class="container">
     <div class="row">       
-      <div class="col-lg-6 col-md-12 col-12">
-        <h5>Links</h5><hr>
+      <div class="col-lg-5 col-md-12 col-12">
+        <h5>Developers</h5>
+        <hr>
+        <!--<h5>Links</h5><hr>
         <ul class="list-unstyled">
           <div class="container">
             <div class="row">
               <div class="col-12">
                 <li><a href="#"><b>Home</b></a></li>
-                <!--<li><a href="#"><b>FAQ</b></a></li>
+                <li><a href="#"><b>FAQ</b></a></li>
                 <li><a href="#"><b>Sign Up</b></a></li>
-                <li><a href="#"><b>Sign In</b></a></li>-->
+                <li><a href="#"><b>Sign In</b></a></li>
               </div>
             </div>
           </div>
-        </ul>
+        </ul>-->
+        <div class="container developers">
+          <div class="row justify-content-center">
+            <div class="col-3">
+              <img class="developer" src="assets/images/team/b16/sandipan.jpg" alt="Sandipan">
+              <div class="caption">Sandipan</div>
+            </div>
+            <div class="col-3">
+              <img class="developer" src="assets/images/team/b16/shivam.jpg" alt="Shivam">
+              <div class="caption">Shivam</div>
+            </div>
+            <div class="col-3">
+              <img class="developer" src="assets/images/team/b17/simrat.jpg" alt="Simrat">
+              <div class="caption">Simrat</div>
+            </div>
+            <div class="col-3">
+              <img class="developer" src="assets/images/team/b17/suma.jpg" alt="Suma">
+              <div class="caption">Suma</div>
+            </div>
+          </div> 
+        </div>
+        <br>
       </div>
+      <div class="col-lg-1"></div>
       <div class="col-lg-3 col-12">
         <h5>Our Address</h5><hr>
         <address>
@@ -34,6 +58,7 @@
         </div>
       </div>
     </div>
+    <br>
     <hr>
     <div class="row justify-content-center">             
       <div class="col-auto">
