--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -11,3 +11,20 @@
 {
   margin-right: 5px;
 }
+img.developer
+{
+  width: 80%;
+  height: auto;
+  border-radius: 50%;
+  margin-left: 8px;
+}
+.developers .col-3
+{
+  padding-left: 0;
+  padding-right: 0;
+}
+.developers .caption
+{
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
